# secure-mpc-transformer-infer

./: .bandit  .dockerignore  .editorconfig  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .secrets.baseline  .semgrep.yml  .yamllint.yaml  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_EXECUTION_REPORT.md  AUTONOMOUS_SDLC_FINAL_REPORT.md  AUTONOMOUS_SDLC_IMPLEMENTATION_SUMMARY.md  AUTONOMOUS_SDLC_RESEARCH_COMPLETION_REPORT.md  BACKLOG.md  CHANGELOG.md  CHANGELOG.md.updated  CI_CD_WORKFLOW_TEMPLATE.md  CLAUDE_IMPROVEMENTS.md  CODEOWNERS  CODE_OF_CONDUCT.md  COMPREHENSIVE_SECURITY_PERFORMANCE_ANALYSIS.md  CONTRIBUTING.md  Dockerfile  ENHANCED_SECURITY_IMPLEMENTATION.md  GENERATION_3_SCALING.md  IMPLEMENTATION_SUMMARY.md  Makefile  PRODUCTION_DEPLOYMENT_GUIDE.md  PROJECT_CHARTER.md  QUANTUM_ENHANCED_MPC_RESEARCH_PAPER.md  README.md  README.md.updated  SECURITY.md  TERRAGON_AUTONOMOUS_QUANTUM_RESEARCH_COMPLETION_REPORT.md  TERRAGON_AUTONOMOUS_SDLC_COMPLETION_REPORT.md  TERRAGON_SDLC_COMPLETION_REPORT.md  TERRAGON_SDLC_EXECUTION_REPORT.md  TERRAGON_SDLC_FINAL_REPORT.md  (+71 more)
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  initialize.sh  on-create.sh  post-create.sh  post-start.sh  update-content.sh
.github/: CODEOWNERS  SECURITY.md  project-metrics.json  pull_request_template.md
.terragon/: config.yaml  discovery-engine.py  metrics-dashboard.py  value-metrics.json
benchmarks/: README.md  benchmark_bert.py  comprehensive_security_performance_benchmark.py  generate_report.py  run_all.py
claude_improvements_20250830_235103/: repository_structure.txt
config/: example_config.json
deployment/: Dockerfile  deployment_summary.json  docker-compose.yml
docker/: .dockerignore  Dockerfile.cpu  Dockerfile.dev  Dockerfile.gpu  Dockerfile.multiarch  README.md  build-multiarch.sh  docker-compose.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  GETTING_STARTED.md  ROADMAP.md  TROUBLESHOOTING.md
examples/: generation_3_scaling_demo.py  quantum_planning_demo.py
k8s/: deployment.yaml  ingress.yaml
monitoring/: alertmanager.yml  docker-compose.monitoring.yml  health-check.sh  otel-collector.yml  prometheus.yml
research_benchmarks/: comparative_validation_study.py  run_comparative_study.py
scripts/: backup.sh  build.sh  (+11 more)
(+279 files in other folders)
